--- a/style.css
+++ b/style.css
@@ -29,10 +29,15 @@
 }
 body {
     min-height: 100vh;
+    flex-direction: column;
+    gap: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--pale-blue);
+}
+.attribution {
+    font-size: 12px;
 }
 .card {
     box-shadow: rgba(0, 0, 0, .24) 0px 3px 8px;
