--- a/style.css
+++ b/style.css
@@ -29,15 +29,16 @@
 }
 body {
     min-height: 100vh;
-    flex-direction: column;
-    gap: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--pale-blue);
+    text-align: center;
 }
 .attribution {
-    font-size: 12px;
+    position: absolute;
+    margin-left: 160px;
+    margin-top: 40px;
 }
 .card {
     box-shadow: rgba(0, 0, 0, .24) 0px 3px 8px;
@@ -187,5 +188,8 @@ body {
     }
     .summary {
         width: 100%;
+    }
+    .attribution {
+        margin-left: 17% ;
     }
 }
