--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ body {
     margin-left: 160px;
     margin-top: 40px;
 }
+a {
+    font-size: 12px;
+    text-decoration: none;
+}
 .card {
     box-shadow: rgba(0, 0, 0, .24) 0px 3px 8px;
     border-radius: 2rem;
